--- a/templates/dashboard/Reporte.html
+++ b/templates/dashboard/Reporte.html
@@ -44,9 +44,6 @@
         background-color: #1e3799; /* Example color, adjust as necessary */
     }
 
-    .bg-red-usat {
-        background-color: #e55039; /* Example color, adjust as necessary */
-    }
 </style>
 
 <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
@@ -67,7 +64,7 @@
         <div class="col-md-6 d-flex align-items-stretch">
             <div class="card mb-4 w-100">
                 <div class="card-header bg-red-usat text-white">
-                    <h5 class="card-title">Reporte de Ambiente</h5>
+                    <h5 class="card-title text-white">Reporte de Ambiente</h5>
                 </div>
                 <div class="card-body">
                     <canvas id="chartAmbiente"></canvas>
@@ -77,7 +74,7 @@
         <div class="col-md-6 d-flex align-items-stretch">
             <div class="card mb-4 w-100">
                 <div class="card-header bg-red-usat text-white">
-                    <h5 class="card-title">Reporte por Docente</h5>
+                    <h5 class="card-title text-white">Reporte por Docente</h5>
                 </div>
                 <div class="card-body">
                     <canvas id="chartDocente"></canvas>
