--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -24,7 +24,7 @@
     <div id="mensajeResultado" style="display: none;"></div>
 
     <div class="card" id="card_ambientes">
-        <div class="card-header bg-primary text-white" id="headingOne" data-bs-toggle="collapse"
+        <div class="card-header  bg-red-usat  text-white" id="headingOne" data-bs-toggle="collapse"
             data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
             Ambientes
         </div>
