--- a/templates/dashboard/perfil.html
+++ b/templates/dashboard/perfil.html
@@ -47,7 +47,7 @@
                 <label for="telefono" class="form-label">Teléfono</label>
                 <input id="telefono" type="tel" class="form-control" placeholder="Ingresa tu número de teléfono" />
               </div>
-              <button type="submit" class="btn btn-primary w-100">Guardar cambios</button>
+              <button type="submit" class="btn btn-success w-100">Guardar cambios</button>
             </form>
           </div>
         </div>
