--- a/templates/dashboard/Reporte.html
+++ b/templates/dashboard/Reporte.html
@@ -72,7 +72,7 @@
         <div class="col-md-6 d-flex align-items-stretch">
             <div class="card mb-4 w-100">
                 <div class="card-header bg-red-usat text-white">
-                    <h5 class="card-title">Reporte de Ambiente</h5>
+                    <h5 class="card-title text-white">Reporte de Ambiente</h5>
                 </div>
                 <div class="card-body">
                     <canvas id="chartAmbiente"></canvas>
@@ -82,7 +82,7 @@
         <div class="col-md-6 d-flex align-items-stretch">
             <div class="card mb-4 w-100">
                 <div class="card-header bg-red-usat text-white">
-                    <h5 class="card-title">Reporte por Docente</h5>
+                    <h5 class="card-title text-white">Reporte por Docente</h5>
                 </div>
                 <div class="card-body">
                     <canvas id="chartDocente"></canvas>
