--- a/templates/dashboard/cursosxescuela.html
+++ b/templates/dashboard/cursosxescuela.html
@@ -5,76 +5,55 @@
 {% block contenido %}
 <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{{url_for('index')}}">Inicio</a></li>
-        <li class="breadcrumb-item active"><a href="{{url_for('cursos')}}">Cursos</a></li>
+        <li class="breadcrumb-item"><a href="{{ url_for('index') }}">Inicio</a></li>
+        <li class="breadcrumb-item active"><a href="{{ url_for('cursos') }}">Cursos</a></li>
     </ol>
 </nav>
 <div class="container">
     <div class="card mt-3" id="card_cursos">
-        <div class="card-header  bg-red-usat   text-white" id="headingOne" data-bs-toggle="collapse"
+        <div class="card-header bg-red-usat text-white" id="headingOne" data-bs-toggle="collapse"
             data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
             Cursos 
         </div>
-        <div class="ms-4 mt-3  ">
+        <div class="ms-4 mt-3">
             <!-- Semestre -->
             <div class="d-flex mb-3 mt-3">
-                <label for="" class="mb-2  me-4  mt-2">Semestre:</label>
-                <select class="form-select w-25 me-3  " aria-label="Default select example" id="semestre" onchange="validar()">
-                    <option selected disabled>  -----Seleccione un semestre-----</option>
+                <label for="" class="mb-2 me-4 mt-2">Semestre:</label>
+                <select class="form-select w-25 me-3" aria-label="Default select example" id="semestre" onchange="validar()">
+                    <option selected disabled>-----Seleccione un semestre-----</option>
                     {% for semestre in semestres %}
-                    <option>{{ semestre[0] }} </option>
+                    <option>{{ semestre[0] }}</option>
                     {% endfor %}
                 </select>
             </div>
             <!-- Escuelas -->
             <div class="d-flex mb-3 mt-3">
-                <label for="" class="mb-2 mt-2" >Escuela :</label>
-                <select class="form-select w-25 me-3 " aria-label="Default select example" id="escuela" style="margin-left:33px" onchange="validar()">
+                <label for="" class="mb-2 mt-2">Escuela:</label>
+                <select class="form-select w-25 me-3" aria-label="Default select example" id="escuela" style="margin-left:33px" onchange="validar()">
                     <option selected disabled>-----Seleccione una escuela-----</option>
                     {% for escuela in escuelas %}
-                    <option>{{ escuela[0] }} </option>
+                    <option>{{ escuela[0] }}</option>
                     {% endfor %}
                 </select>
             </div>
-
-            <!-- CURSOS -->
-
-            <div class="d-flex">
-                <label for="" class="mb-2 mt-2 form-label me-4">Cursos:</label>
-                <input type="text" class="form-control  w-25  danger"  placeholder="Buscar Cursos" onkeypress="filtrado()"  id="curso" style="margin-left:18px" >
-            </div>
-
         </div>
         <hr class="border-black">
-        <div class="me-5 ms-5 " id="miTabla">
-            <table class="table">   
-                <thead>       
+        <div class="me-5 ms-5" id="miTabla">
+            <table class="table" id="tabla-cursos">
+                <thead>
                     <tr>
-                        <th>
-                            Código
-                        </th>
-                        <th>
-                            Nombre del curso
-                        </th>
-                        <th>
-                            Ciclo
-                        </th>
-                        <th>
-                            N° Grupos
-                        </th>
-                        <th>
-                            <input type="checkbox" class="form-check-input   me-3 border border-dark" onclick="seleccionar_toda()" id="est"> 
-                        </th>
-                        
+                        <th>Código</th>
+                        <th>Nombre del curso</th>
+                        <th>Ciclo</th>
+                        <th>N° Grupos</th>
+                        <th><input type="checkbox" class="form-check-input me-3 border border-dark" onclick="seleccionar_toda()" id="est"></th>
                     </tr>
                 </thead>
                 <tbody id="cuerpo_tabla">
-
                 </tbody>
-
             </table>
             <div class="text-end mb-2">
-                <button class="btn  btn-success bg_green_button me-2">Guardar</button>
+                <button class="btn btn-success bg_green_button me-2">Guardar</button>
                 <button class="btn btn-danger me-5">Cancelar</button>
             </div>
         </div>
@@ -83,81 +62,63 @@
 
 <!-- Script para inicializar el DataTable y realizar la búsqueda -->
 <script>
-
-    function seleccionar_toda() {
-        var checkbox = document.getElementById('est');
-        var isChecked = checkbox.checked; 
-        var input_check = document.querySelectorAll('input[type="checkbox"]');
-    
-        for (var i = 0; i < input_check.length; i++) {
-            input_check[i].checked = isChecked; 
-        }
-    }
-    
-    function validar() {
-        var semestre = document.getElementById('semestre');
-        var escuela = document.getElementById('escuela');
-        
-        if (semestre.selectedIndex > 0 && escuela.selectedIndex > 0) {
-            rellenarTabla(escuela.value);
-        }
-    }
-
-    function filtrado() {
-        // Validar el estado y obtener el valor del campo de curso
-        const estado = validar();
-        const curso = document.getElementById('curso').value;
-    
-        // Verificar si el estado es verdadero y si el campo de curso tiene contenido
-        if (estado && curso.length > 0) {
-            const filtro = curso.toUpperCase();
-            const filas = document.getElementById('cuerpo_tabla').getElementsByTagName('tr');
-            // Iterar sobre las filas de la tabla y ocultar aquellas que no coincidan con el curso
-            for (let i = 0; i < filas.length; i++) {
-                const nombreCurso = filas[i].getElementsByTagName('td')[1];
-                if (nombreCurso) {
-                    const textoCurso = nombreCurso.textContent || nombreCurso.innerText;
-                    if (textoCurso.toUpperCase().includes(filtro)) {
-                        filas[i].style.display = '';
-                    } else {
-                        filas[i].style.display = 'none';
+    $(document).ready(function() {
+        var table = $('#tabla-cursos').DataTable({
+            "paging": true,
+            "info": true,
+            "columns": [
+                { "data": "idcurso" },
+                { "data": "nombre" },
+                { "data": "ciclo" },
+                {
+                    "data": "total_grupos",
+                    "render": function(data, type, row) {
+                        return `<input type="number" value="${data}" id="miCampoNumerico" class="form-control bg-white text-black text-center">`;
                     }
-                }       
+                },
+                {
+                    "data": null,
+                    "render": function(data, type, row) {
+                        return `<input type="checkbox" class="form-check-input me-3 border border-dark">`;
+                    }
+                }
+            ],
+            "language": {
+                "url": "//cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json"
             }
-        } else {
-            // Si el estado no es verdadero o el campo de curso está vacío, mostrar un mensaje de error o realizar otra acción
-            console.log("Error: El estado no es válido o el campo de curso está vacío.");
-        }
-    }
-    
-    function rellenarTabla(escuela) {
-        fetch(`/rellenar_tabla/${escuela}`)
-          .then(response => response.json())
-          .then(data => {
-            console.log(data)
-            const cuerpoTabla = document.getElementById('cuerpo_tabla');
-            // Limpiar contenido previo de la tabla
-            cuerpoTabla.innerHTML = '';
-            data.forEach(curso => {
-              const fila = document.createElement('tr');
-              fila.innerHTML = `
-                <td>${curso.idcurso}</td>
-                <td>${curso.nombre}</td>
-                <td>${curso.ciclo}</td>
-                <td class="" style="width:90px">
-                    <input type="number" id="miCampoNumerico" class="form-control bg-white text-black">
-                </td>
-                <td>
-                    <input type="checkbox" class="form-check-input me-3 border border-dark">
-                </td>
-              `;
-              cuerpoTabla.appendChild(fila);
-            });
-          })
-          .catch(error => {
-            console.error('Error al obtener los datos de la tabla:', error);
-          });
-    }
+        });
 
+        window.rellenarTabla = function(escuela) {
+            fetch(`/rellenar_tabla/${escuela}`)
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                    table.clear();
+                    table.rows.add(data);
+                    table.draw();
+                })
+                .catch(error => {
+                    console.error('Error al obtener los datos de la tabla:', error);
+                });
+        };
+
+        window.seleccionar_toda = function() {
+            var checkbox = document.getElementById('est');
+            var isChecked = checkbox.checked;
+            var input_check = document.querySelectorAll('input[type="checkbox"]');
+
+            for (var i = 0; i < input_check.length; i++) {
+                input_check[i].checked = isChecked;
+            }
+        };
+
+        window.validar = function() {
+            var semestre = document.getElementById('semestre');
+            var escuela = document.getElementById('escuela');
+            if (semestre.selectedIndex > 0 && escuela.selectedIndex > 0) {
+                rellenarTabla(escuela.value);
+            }
+        };
+    });
 </script>
 {% endblock %}
